[package]
name = "test_libraries"
version = "0.1.0"
authors = ["jammy-dodgers <emily@jambox.cc>"]
edition = "2018"

[lib]
name = "library"
crate_type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "loadbin"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6"
